# verilog-ai

./: .env.example  .gitignore  README.md  pyproject.toml
config/: constraints.json  interfaces.json  optuna_params.json
docker/: Dockerfile.sim
docs/: ARCHITECTURE.md  CVDP_INTEGRATION.md  DEV_GUIDE.md
src/: cancellation.py  cli.py  llm.py  pipeline.py
src/agents/: architecture.py  base.py  diagnosis.py  ppa.py  simulation.py  syntax.py  vivado_ppa.py
src/cvdp/: loader.py  scoring.py
src/main_model/: generator.py
src/mcp/: server.py
src/optimizer/: optuna_runner.py
src/tui/: app.py
src/workbench/: __init__.py  manager.py  models.py  store.py
tests/: test_cancellation.py  test_sandbox.py  test_tui_app.py
tests/agents/: test_diagnosis.py  test_pipeline.py  test_syntax.py
tests/benchmark/: bench_sim.py
tests/cvdp/: test_loader.py  test_scoring.py
tests/integration/: test_cli_benchmark.py  test_pipeline.py  test_rtl_reuse.py
tests/main_model/: test_generator.py  test_llm.py
tests/mcp/: test_server.py
tests/optimizer/: test_optuna.py
