[project]
name = "verigen"
version = "0.1.0"
description = "LLM-based Verilog RTL generator with multi-agent verification and Optuna optimization"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "click>=8.1",
    "requests>=2.31",
    "pydantic>=2.0",
    "datasets>=3.0",
    "python-dotenv>=1.0",
    "textual>=0.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-timeout>=2.0",
]

[project.scripts]
verigen = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
